Integer.valueOf() is cheaper than new Integer()
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpclient/trunk@722083 13f79535-47bb-0310-9956-ffa450edef68